--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,5 @@
 {
   "name": "flux-api/plugins/flux-api",
-  "version": "0.1"
+  "version": "0.1",
+  "description": "Core plugins for the flux-api"
 }
