using composer/installers now to be able to install into plugins directory

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,10 @@
 {
   "name": "flux-api/plugins/flux-api",
+  "namespace": "FluxAPI",
   "version": "0.1",
-  "description": "Core plugins for the flux-api"
+  "description": "Core plugins for the flux-api",
+  "type": "flux-api/plugin",
+  "require": {
+    "composer/installers": "~1.0"
+  }
 }
