removed the composer installer config from the composer.json as this wont work for custom frameworks

--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,6 @@
 {
   "name": "flux-api/plugins/flux-api",
-  "namespace": "FluxAPI",
+  "license": "GPL",
   "version": "0.1",
-  "description": "Core plugins for the flux-api",
-  "type": "flux-api/plugin",
-  "require": {
-    "composer/installers": "~1.0"
-  }
+  "description": "Core plugins for the flux-api"
 }
