--- a/composer.json
+++ b/composer.json
@@ -2,5 +2,15 @@
   "name": "flux-api/plugins/flux-api",
   "license": "GPL",
   "version": "0.1",
-  "description": "Core plugins for the flux-api"
+  "description": "Core plugins for the flux-api",
+  "type": "flux-api-plugin",
+  "repositories": [
+    {
+      "type": "vcs",
+      "url": "git@github.com:der-On/PHP-FluxAPI-Installers.git"
+    }
+  ],
+  "require": {
+    "flux-api/installers": ">=0.1"
+  }
 }
