--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
   "repositories": [
     {
       "type": "vcs",
-      "url": "git@github.com:der-On/PHP-FluxAPI-Installers.git"
+      "url": "git://github.com/der-On/PHP-FluxAPI-Installers.git"
     }
   ],
   "require": {
